[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/board/minion_on_board.gd" id="1"]

[sub_resource type="CylinderMesh" id="CylinderMesh_highlight"]
top_radius = 0.5
bottom_radius = 0.5
height = 0.02

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_highlight"]
transparency = 1
albedo_color = Color(0.2, 1, 0.2, 0.4)
emission_enabled = true
emission = Color(0.2, 1, 0.2, 1)
emission_energy_multiplier = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_taunt"]
inner_radius = 0.4
outer_radius = 0.5
ring_segments = 24
rings = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_taunt"]
transparency = 1
albedo_color = Color(1, 0.8, 0.2, 0.6)
emission_enabled = true
emission = Color(1, 0.8, 0.2, 1)
emission_energy_multiplier = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_minion"]
size = Vector3(0.8, 1.2, 0.8)

[node name="MinionOnBoard" type="Node3D"]
script = ExtResource("1")

[node name="ModelContainer" type="Node3D" parent="."]

[node name="StatsDisplay" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="ATKLabel" type="Label3D" parent="StatsDisplay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0.4)
pixel_size = 0.008
text = "0"
font_size = 28
outline_size = 10
modulate = Color(1, 0.8, 0.2, 1)
billboard = 1

[node name="HPLabel" type="Label3D" parent="StatsDisplay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0.4)
pixel_size = 0.008
text = "0"
font_size = 28
outline_size = 10
modulate = Color(1, 0.2, 0.2, 1)
billboard = 1

[node name="Highlight" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
visible = false
mesh = SubResource("CylinderMesh_highlight")
surface_material_override/0 = SubResource("StandardMaterial3D_highlight")

[node name="TauntIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("TorusMesh_taunt")
surface_material_override/0 = SubResource("StandardMaterial3D_taunt")

[node name="Area3D" type="Area3D" parent="."]
input_ray_pickable = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("BoxShape3D_minion")
